# BuildPixel

./: NewProject.bmpr  README.md  app-all-debug.apk  build.gradle  unnamed.patch
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/aplicacao/eron/build_pixel/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aplicacao/Interfaces/: ICadeiaResponsabilidadeCalculo.java  Operacoes.java  OperacoesArea.java  OperacoesBinarias.java  OperacoesN_arias.java  OperacoesUnarias.java
app/src/main/java/com/aplicacao/Modelo/: Ferramentas.java  ImageViewAux.java  Imagem.java  NDK.java  Processador.java  Processo.java
app/src/main/java/com/aplicacao/Processamento/ProcessamentoArea/: Agucar.java  CelulaThreshold.java  DestacarRelevo.java  Equalizar.java  ErrorDiffusion.java  FloydSteinberg.java  FreiChen.java  Halftone.java  Kirsch.java  Laplace.java  Media.java  OilPaint.java  Prewitt.java  Roberts.java  Sharpen.java  Sobel.java
app/src/main/java/com/aplicacao/Processamento/ProcessamentoBinario/: Cartoon.java  Normalizacao.java  Truncamento.java
app/src/main/java/com/aplicacao/Processamento/ProcessamentoUnario/: Amarelo.java  Azul.java  Blue.java  Brilho.java  Ciano.java  CinzaMedia.java  Green.java  Inverter.java  Luminosidade.java  Magenta.java  Red.java  Sepia.java  Threshold.java  Verde.java  Vermelho.java
app/src/main/jni/: Cartoon.c  CelulaThreshold.c  Convolucao.c  Equalizar.c  ErrorDifusion.c  FloydSteinberg.c  Halftone.c  Mascaras.c  Media.c  ProcessamentoBinario.c  ProcessamentoUnario.c  Teste.c  Tintaoleo.c  buildPixelNativeLib.h  teste.cpp  zoaFotoNativeLib.h
app/src/main/res/anim/: fade_in.xml  fade_out.xml  rotate_left.xml  rotate_right.xml
app/src/main/res/drawable/: circular_progress_bar_view.xml  selector_active_inative.xml  selector_btnenviar.xml
app/src/main/res/layout/: activity_captura.xml  activity_main.xml  alert_spinner_layout.xml  list_item.xml
app/src/main/res/layout-land/: activity_captura.xml
app/src/main/res/layout-v21/: activity_main.xml
app/src/main/res/menu/: menu_captura.xml  menu_main.xml
app/src/main/res/values/: color.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-w820dp/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
